# minik-script

./: .clangd  CMakeLists.txt  README.md  build.sh  test.mn
examples/: raylib_demo.mn  raylib_hello_world.mn  rule110.mn
src/: ast_printer.cpp  base.h  callable.cpp  callable.h  class.cpp  class.h  database.cpp  database.h  environment.h  exception.h  expression.h  function.cpp  function.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  log.h  main.cpp  minik.cpp  minik.h  object.h  package.h  parser.cpp  parser.h  resolver.cpp  resolver.h  statement.h  token.h  visitor.h
tests/: algo_fib.mn  algo_primes.mn  class.mn  defer.mn  for.mn  function.mn  goto.mn  if.mn  label.mn  logical.mn  namespace.mn  scope.mn  tester.cpp  tester.h  use_before_define.mn  variables.mn
tests/expected/: algo_fib.txt  algo_primes.txt  class.txt  defer.txt  for.txt  function.txt  goto.txt  if.txt  label.txt  logical.txt  namespace.txt  scope.txt  use_before_define.txt  variables.txt
